--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 baseurl = "https://skytog.github.io/profile/"
 title = "nicox profile"
 theme = "hugo-coder"
-languagecode = "en"
-defaultcontentlanguage = "en"
+languagecode = "jpS"
+defaultcontentlanguage = "jp"
 publishDir = "docs"
 
 paginate = 20
@@ -11,7 +11,7 @@ pygmentsstyle = "bw"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-disqusShortname = "yourdiscussshortname"
+# disqusShortname = "yourdiscussshortname"
 
 [params]
   author = "Nicox"
